name:                twitter-feed
version:             0.1.1.1
synopsis:            Client for fetching Twitter timeline via Oauth
description:         Fetches a user timeline from Twitter, and optionally linkifies the results using the Twitter entity API.
homepage:            https://github.com/stackbuilders/twitter-feed
license:             MIT
license-file:        LICENSE
author:              Justin Leitgeb, Andrés Torres
maintainer:          justin@stackbuilders.com
category:            Web
build-type:          Simple
extra-source-files:
cabal-version:       >=1.10

source-repository head
  type:            git
  location:        https://github.com/stackbuilders/twitter-feed.git

library
  exposed-modules:     Web.Twitter.Feed
  ghc-options:         -Wall
  build-depends:         base >=4.6 && <4.7
                       , authenticate-oauth
                       , aeson
                       , http-conduit

  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite twitter-library
  type: exitcode-stdio-1.0
  hs-source-dirs: test, src
  main-is: Suite.hs
  build-depends:
      base >=4.6 && <4.7
      , test-framework >=0.8 && <0.9
      , HUnit
      , test-framework-hunit
      , containers

      , authenticate-oauth
      , aeson
      , http-conduit

  default-language:    Haskell2010
